[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/game_ui/LevelComplete.gd" type="Script" id=1]
[ext_resource path="res://scenes/menu/painel_style_blue.tres" type="StyleBox" id=2]
[ext_resource path="res://scenes/game_ui/LevelCompleteButton.gd" type="Script" id=3]
[ext_resource path="res://scenes/menu/buttons/GreenButtonNormal.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/Font/gomarice_shmup_in_the_zone.ttf" type="FontFile" id=5]
[ext_resource path="res://assets/Font/JuanMikes.otf" type="FontFile" id=6]
[ext_resource path="res://assets/Font/text_ui.tres" type="FontFile" id=7]
[ext_resource path="res://assets/Images/UI/Storyboard/Cena5.png" type="Texture2D" id=9]
[ext_resource path="res://assets/Images/UI/Storyboard/EmptyStar.png" type="Texture2D" id=10]
[ext_resource path="res://assets/Images/UI/Storyboard/FullStar.png" type="Texture2D" id=11]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 800, 470 )
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[sub_resource type="FontFile" id=2]
size = 60
outline_size = 3
font_data = ExtResource( 5 )

[sub_resource type="FontFile" id=3]
size = 28
font_data = ExtResource( 6 )

[node name="LevelComplete" type="Control" groups=[
"level_complete",
]]
process_mode = 3
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
full_star = ExtResource( 11 )

[node name="Panel" type="Panel" parent="."]
offset_right = 800.0
offset_bottom = 450.0
mouse_filter = 1
theme_override_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -374.0
offset_top = 29.0
offset_right = 15.0
offset_bottom = 154.0
theme_override_fonts/font = SubResource( 2 )
theme_override_colors/font_color = Color( 0.12549, 0.839216, 0, 1 )
theme_override_colors/font_outline_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_shadow_color = Color( 0.92549, 0.898039, 0.760784, 1 )
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
text = "STAGE_COMPLETE"
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pontos" type="Panel" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -196.5
offset_top = -127.0
offset_right = 196.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2( 32, 32 )
mouse_filter = 1
theme_override_styles/panel = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Pontos"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Pontos/HBoxContainer"]
offset_left = 14.0
offset_right = 218.0
offset_bottom = 127.0
mouse_filter = 2
alignment = 1

[node name="Pontuacao" type="Label" parent="Panel/Pontos/HBoxContainer/VBoxContainer"]
offset_top = 18.0
offset_right = 204.0
offset_bottom = 41.0
theme_override_fonts/font = ExtResource( 7 )
text = "PONTUAÇÃO"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Pontos/HBoxContainer/VBoxContainer"]
offset_top = 45.0
offset_right = 204.0
offset_bottom = 109.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Star1" type="TextureRect" parent="Panel/Pontos/HBoxContainer/VBoxContainer/HBoxContainer"]
offset_right = 64.0
offset_bottom = 64.0
custom_minimum_size = Vector2( 64, 64 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Star2" type="TextureRect" parent="Panel/Pontos/HBoxContainer/VBoxContainer/HBoxContainer"]
offset_left = 68.0
offset_right = 132.0
offset_bottom = 64.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Star3" type="TextureRect" parent="Panel/Pontos/HBoxContainer/VBoxContainer/HBoxContainer"]
offset_left = 136.0
offset_right = 200.0
offset_bottom = 64.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Panel/Pontos/HBoxContainer/VBoxContainer/HBoxContainer"]
offset_left = 204.0
offset_right = 204.0
offset_bottom = 64.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelCompleteButton" type="Button" parent="Panel/Pontos/HBoxContainer"]
offset_left = 238.0
offset_top = 41.0
offset_right = 379.0
offset_bottom = 86.0
size_flags_vertical = 4
theme_override_styles/hover = ExtResource( 4 )
theme_override_styles/pressed = ExtResource( 4 )
theme_override_styles/focus = ExtResource( 4 )
theme_override_styles/disabled = ExtResource( 4 )
theme_override_styles/normal = ExtResource( 4 )
theme_override_fonts/font = ExtResource( 7 )
disabled = true
text = "CONTINUAR"
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="Panel/Pontos/HBoxContainer/LevelCompleteButton"]
wait_time = 2.0
one_shot = true

[node name="Pontuacao2" type="Label" parent="Panel/Pontos"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.125
offset_top = -0.212509
offset_right = 91.875
offset_bottom = 33.7875
scale = Vector2( 0.3, 0.3 )
theme_override_fonts/font = SubResource( 3 )
text = "30 / 50"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="visibility_changed" from="." to="Panel/Pontos/HBoxContainer/LevelCompleteButton" method="_on_level_complete_visibility_changed"]
[connection signal="button_down" from="Panel/Pontos/HBoxContainer/LevelCompleteButton" to="Panel/Pontos/HBoxContainer/LevelCompleteButton" method="_on_LevelCompleteButton_button_down"]
[connection signal="timeout" from="Panel/Pontos/HBoxContainer/LevelCompleteButton/Timer" to="Panel/Pontos/HBoxContainer/LevelCompleteButton" method="_on_Timer_timeout"]
